// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddFavorite render correctly as admin: admin 1`] = `
<DocumentFragment>
  <button
    class="chakra-button chakra-stack css-1lxfpe5"
    data-testid="add-favorite-button"
    type="button"
  >
    <div
      class="css-11fppeb"
    >
      <svg
        class="chakra-icon css-1is9v2p"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
        />
      </svg>
      <p
        class="css-1z0aqs4"
      >
        Add your Favorite
      </p>
    </div>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`AddFavorite render correctly as holder: holder 1`] = `
<DocumentFragment>
  <button
    class="chakra-button chakra-stack css-1hp2lew"
    data-testid="add-favorite-button"
    type="button"
  >
    <div
      class="css-11fppeb"
    >
      <svg
        class="chakra-icon css-1is9v2p"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"
        />
      </svg>
      <p
        class="css-1z0aqs4"
      >
        Add your Favorite
      </p>
    </div>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
